# ECSGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CompileShaders.lnk  Engine.ixx  GameEngine.sln  GameEngine.sln.DotSettings  GameEngine.vcxproj  GameEngine.vcxproj.filters  setup-linux.sh  vcpkg-configuration.json  vcpkg.json
Config/: Editor.toml  Editor.user.toml
Editor/: App.xaml  App.xaml.cs  AssetBrowser.xaml  AssetBrowser.xaml.cs  Controller.cpp  Controller.cppm  DetailsPanel.xaml  DetailsPanel.xaml.cs  EditingContext.cpp  EditingContext.cppm  EditingContextId.cppm  Editor.Events.cppm  Editor.Requests.cppm  Editor.cpp  Editor.cppm  Editor.csproj  EditorCamera.cpp  EditorCamera.cppm  EditorConfig.cppm  EditorExport.h  EditorServices.cppm  EngineInterop.cs  Icons.cppm  MainMenu.xaml  MainMenu.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NewProjectDialog.xaml.cs  NewProjectView.xaml  NewProjectView.xaml.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs  Panel.Impl.cppm  Panel.cppm  PanelCreateInfo.cppm  ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs  ProjectConfig.cppm  PropertiesPanel.xaml  PropertiesPanel.xaml.cs  (+11 more)
Editor/Components/: EntityProxyComponent.cppm  GizmoComponent.cppm  _EditorComponents.cppm
Editor/Config/: Editor.toml  Editor.user.toml
Editor/GameProject/: ProjectCreator.cs  ProjectOpener.cs  Scene.cs  SceneManager.cs
Editor/ImGui/: ImGuiUI.cpp  ImGuiUI.cppm
Editor/Panels/: AssetBrowserPanel.cppm  DetailsPanel.cpp  DetailsPanel.cppm  HierarchyPanel.cppm  ImGuiDemoPanel.cppm  MainMenuPanel.cpp  MainMenuPanel.cppm  ViewportPanel.cpp  ViewportPanel.cppm
Editor/Serialisation/: Serialiser.cs
Editor/Systems/: EntityProxySystem.cppm
Editor/Tools/: EntityEditingMode.cppm  Gizmos.cpp  Gizmos.cppm  SelectionGizmo.cpp  SelectionGizmo.cppm  TransformTool.Detail.cppm  TransformTool.Scale.cpp  TransformTool.Translate.cpp  TransformTool.cpp  TransformTool.cppm  TranslateTool.cpp  TranslateTool.cppm
Engine/: Application.cpp  Application.cppm  Archetype.cppm  AssetManager.cppm  Camera.cpp  Camera.cppm  ComponentArray.cppm  ComponentRegistry.cppm  Config.cppm  Core.cppm  CoreTypes.cppm  EditorContext.cppm  EditorUIContext.cppm  Engine.cpp  Engine.cppm  EngineExport.h  EnumUtils.cppm  EventBus.cpp  EventBus.cppm  GameEngine.vcxproj  GameEngine.vcxproj.filters  Guid.cppm  Input.cpp  Input.cppm  Job.cppm  Log.cppm  Math.cppm  Physics.cpp  Physics.cppm  Player.cppm  Project.cppm  Serialization.cpp  Serialization.cppm  Thread.cppm  TransformUtils.cppm  Viewport.cppm  World.cpp  World.cppm
Engine/AssetManager/: Asset.cpp  AssetDatabase.cppm  AssetLoader.Mesh.cpp  AssetLoader.Mesh.cppm  AssetLoader.cppm  AssetManager.cpp  AssetManager.cppm
Engine/AssetTypes/: Mesh.cpp  Mesh.cppm  Texture.cppm
Engine/Component/: BoundingBoxComponent.cppm  CameraComponent.cppm  HierarchyComponent.cppm  LineRenderComponent.cppm  ModelComponent.cppm  NameComponent.cppm  ParentComponent.cppm  PersistentIdComponent.cppm  RenderComponent.cppm  TagsComponent.cppm  TransformComponent.cppm  _EngineComponents.cppm
Engine/Components/: BoundingBoxComponent.cppm  CameraComponent.cpp  CameraComponent.cppm  HierarchyComponent.cpp  HierarchyComponent.cppm  LineRenderComponent.cppm  ModelComponent.cppm  NameComponent.cppm  PersistentIdComponent.cppm  RenderComponent.cppm  TagsComponent.cppm  TransformComponent.cpp  TransformComponent.cppm  _EngineComponents.cppm
Engine/Config/: DefaultEngine.toml
Engine/Core/: EditorCallbacks.cppm  Primitives.cppm  RenderManager.cpp  RenderManager.cppm  RenderUtils.cppm  VulkanResource.cppm
Engine/CoreTypes/: FrameTimer.cpp  FrameTimer.cppm  Geometry.cppm
Engine/DebugUI/: DebugWidget.cppm  DebugWidget_EntityExplorer.cppm  IDebugWidget.cppm  ImGui.cpp  ImGui.cppm
Engine/DeveloperUI/: Widget.cppm
Engine/ECS/: Archetype.cpp  Archetype.cppm  ComponentAccess.cppm  ComponentArray.cppm  ComponentDirtyTracker.cppm  ComponentRegistry.cppm  DirtyTracker.cppm  System.cppm  SystemManager.cppm  World.Events.cppm  World.cpp  World.cppm  WorldHandle.cppm  WorldManager.cpp  WorldManager.cppm
Engine/Editor/: Controller.cppm  EditingContextId.cppm  Editor.Events.cppm  Editor.Requests.cppm  Editor.cpp  Editor.cppm  EditorBridge.cpp  EditorBridge.cppm  EditorCamera.cpp  EditorCamera.cppm  Gizmos.cpp  Panel.cppm  Properties.cppm  PropertyDrawers.cppm  Selection.cpp  Selection.cppm
Engine/Platform/: FileSystem.Linux.cpp  FileSystem.Windows.cpp  FileSystem.cpp  FileSystem.cppm  Glfw.cppm  Platform.cpp  Platform.cppm  Window.cpp  Window.cppm
Engine/Reflection/: Properties.cppm
Engine/Render/: RenderManager.cpp  RenderManager.cppm  RenderObject.cpp  RenderUtils.cpp  RenderUtils.cppm  TextureLoading.cpp
Engine/Rendering/: ImGuiRenderer.cpp  ImGuiRenderer.cppm  Image.cpp  Image.cppm  Model.cppm  RenderCommands.cppm  RenderManager.cpp  RenderManager.cppm  RenderObject.cpp  RenderObject.cppm  TextureLoading.cppm
Engine/Scene/: Scene.Events.cppm  Scene.cpp  Scene.cppm  SceneManager.cpp  SceneManager.cppm  SceneSerializer.cppm
Engine/Serialization/: Serialization.Json.cpp  Serialization.Json.cppm  Serialization.Toml.cppm
Engine/System/: System_LineRender.cppm
Engine/Systems/: BoundingBoxSystem.cppm  CameraSystem.cppm  HierarchySystem.cppm  LineRenderSystem.cppm  (+7 more)
ExternalModules/: vulkan.ixx
Game/: Game.cpp  Game.vcxproj  imgui.ini
GameEngine/: Application.cpp  Application.cppm  ApplicationState.ixx  Archetype.cppm  AssetManager.cpp  AssetManager.cppm  AssetManager.ixx  ComponentArray.cppm  ComponentRegistry.cppm  ComponentRegistry.ixx  Config.cpp  Config.cppm  Config.ixx  Config.json  Core.cppm  Core.ixx  CoreTypes.cppm  Ecs.cpp  Ecs.cppm  Engine.cpp  Engine.cppm  Engine.ixx  EngineDecl.cppm  EngineDecl.ixx  Export.h  GameEngine.vcxproj  GameEngine.vcxproj.filters  Guid.cppm  Guid.ixx  Input.cpp  Input.cppm  Job.cppm  Job.ixx  Log.cppm  Math.cpp  Math.cppm  Math.ixx  ModuleDependencies  Modules.cppm.ifc.d.json  Physics.cpp  (+13 more)
Scripts/: setup-linux.sh  setup-windows.ps1
Source/: CMakeLists.txt
scripts/: FindAllVkUses.bat
(+218 files in other folders)
